# Kompressor

./: CHANGELOG.md  README.md
.github/workflows/: build.yaml
build-logic/build-logic/src/main/kotlin/com/ensody/buildlogic/: BuildLogicPlugin.kt  ClangKonanTask.kt  CompileJni.kt  JniTarget.kt
gradle/: libs.versions.toml
kompressor-brotli--nativelib/: build.gradle.kts
kompressor-brotli--nativelib/src/jvmMain/: build.zig
kompressor-brotli-ktor/: build.gradle.kts
kompressor-core/: build.gradle.kts
kompressor-core/src/commonMain/kotlin/com/ensody/kompressor/core/: AsyncSliceTransform.kt
kompressor-kotlinx-io/: build.gradle.kts
kompressor-ktor/: README.md  build.gradle.kts
kompressor-ktor/src/commonMain/kotlin/com/ensody/kompressor/ktor/: BaseSliceTransformContentEncoder.kt
kompressor-test/: build.gradle.kts
kompressor-test/src/commonMain/kotlin/com/ensody/kompressor/test/: RandomSource.kt
kompressor-zlib--nativelib/: README.md  build.gradle.kts
kompressor-zlib--nativelib/src/androidMain/: CMakeLists.txt
kompressor-zlib--nativelib/src/commonMain/kotlin/com/ensody/kompressor/zlib/: Zlib.kt  ZlibResult.kt
kompressor-zlib--nativelib/src/jvmCommonMain/jni/: Wrapper.cpp
kompressor-zlib--nativelib/src/jvmMain/: build.zig
kompressor-zlib--nativelib/src/nativeMain/cinterop/: lib.def
kompressor-zlib-ktor/: README.md  build.gradle.kts
kompressor-zstd--nativelib/: build.gradle.kts
kompressor-zstd--nativelib/src/jvmMain/: build.zig
kompressor-zstd-ktor/: README.md  build.gradle.kts
(+12 files in other folders)
